--- a/test.tex
+++ b/test.tex
@@ -5,8 +5,12 @@
 
 %%%%%%%%%%%%%%% Les paquets
 
-\usepackage[english]{babel}
 \usepackage[palette=munch]{nexus}
+
+%%%%%%%%%%%%%%% font and encoding
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[spanish]{babel}
 
 %%%%%%%%%%%%%%%% hyperref
 \usepackage{lipsum}
@@ -23,95 +27,95 @@
 
 \tableofcontents
 
-\chapter{This is a Chapter}
-\section{This is a section}
-\subsection{This is a subsection}
+\chapter{Este es una capítulo}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-3]
 
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\section{This is a section}
-\subsection{This is a subsection}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-1]
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
 
-\chapter{This is a Chapter}
-\section{This is a section}
-\subsection{This is a subsection}
+\chapter{Este es una capítulo}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-3]
 
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\section{This is a section}
-\subsection{This is a subsection}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-1]
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
 %%%%%%%%%%%%%%%%%%%%%%%
 
 
-\chapter{This is a Chapter}
-\section{This is a section}
-\subsection{This is a subsection}
+\chapter{Este es una capítulo}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-3]
 
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\section{This is a section}
-\subsection{This is a subsection}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-1]
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\chapter{This is a Chapter}
-\section{This is a section}
-\subsection{This is a subsection}
+\chapter{Este es una capítulo}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-3]
 
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\section{This is a section}
-\subsection{This is a subsection}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-1]
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
 
 %%%%%%
 \begin{appendices}
-\chapter{This is a Chapter}
-\section{This is a section}
-\subsection{This is a subsection}
+\chapter{Este es una capítulo}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-3]
 
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\section{This is a section}
-\subsection{This is a subsection}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-1]
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\chapter{This is a Chapter}
-\section{This is a section}
-\subsection{This is a subsection}
+\chapter{Este es una capítulo}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-3]
 
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
-\section{This is a section}
-\subsection{This is a subsection}
+\section{Este es un sección}
+\subsection{Este es un subsección}
 \lipsum[1-1]
-\subsection{This is a subsection}
+\subsection{Este es un subsección}
 \lipsum[1-2]
 
 
